service.yml
apiVersion: v1
kind: Service
metadata:
  name: justin-portfolio-service
  namespace: justin
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: justin-portfolio
