ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: justin-portfolio-ingress
  namespace: justin
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/issuer: justin-letsencrypt
spec:
  tls:
  - hosts:
    - justinferron.nl
    secretName: justin-portfolio-cert
  rules:
  - host: justinferron.nl
    http:
      paths:
      - path: /
        backend:
          serviceName: justin-portfolio-service
          servicePort: 80
